--- a/developer_notes/component.ipynb
+++ b/developer_notes/component.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-09 23:12:34 - INFO - [prompt_builder.py:82:__init__] - Prompt has variables: ['input_str']\n"
+      "2024-06-10 10:05:19 - INFO - [prompt_builder.py:82:__init__] - Prompt has variables: ['input_str']\n"
      ]
     },
     {
@@ -85,7 +85,7 @@
        ")"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,19 +97,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-09 23:12:34 - INFO - [generator.py:196:call] - prompt_kwargs: {'input_str': 'What is the best treatment for headache?'}\n",
-      "2024-06-09 23:12:34 - INFO - [generator.py:197:call] - model_kwargs: {}\n",
-      "2024-06-09 23:12:34 - INFO - [openai_client.py:122:call] - api_kwargs: {'model': 'gpt-3.5-turbo', 'messages': [{'role': 'system', 'content': '<SYS> You are a doctor </SYS> User: What is the best treatment for headache?'}]}\n",
-      "2024-06-09 23:12:36 - INFO - [_client.py:1026:_send_single_request] - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-06-09 23:12:36 - INFO - [generator.py:205:call] - output: GeneratorOutput(data=\"The best treatment for a headache varies depending on the cause of the headache. For tension headaches, over-the-counter pain relievers such as ibuprofen or acetaminophen may be helpful. If the headache is due to dehydration, drinking plenty of water and rest may help. For migraines, prescription medications such as triptans may be necessary. It's important to consult with a healthcare professional to determine the most appropriate treatment for your specific type of headache.\", error=None, raw_response=\"The best treatment for a headache varies depending on the cause of the headache. For tension headaches, over-the-counter pain relievers such as ibuprofen or acetaminophen may be helpful. If the headache is due to dehydration, drinking plenty of water and rest may help. For migraines, prescription medications such as triptans may be necessary. It's important to consult with a healthcare professional to determine the most appropriate treatment for your specific type of headache.\")\n",
-      "The best treatment for a headache varies depending on the cause of the headache. For tension headaches, over-the-counter pain relievers such as ibuprofen or acetaminophen may be helpful. If the headache is due to dehydration, drinking plenty of water and rest may help. For migraines, prescription medications such as triptans may be necessary. It's important to consult with a healthcare professional to determine the most appropriate treatment for your specific type of headache.\n"
+      "2024-06-10 10:05:19 - INFO - [generator.py:194:call] - prompt_kwargs: {'input_str': 'What is the best treatment for headache?'}\n",
+      "2024-06-10 10:05:19 - INFO - [generator.py:195:call] - model_kwargs: {}\n",
+      "2024-06-10 10:05:19 - INFO - [openai_client.py:122:call] - api_kwargs: {'model': 'gpt-3.5-turbo', 'messages': [{'role': 'system', 'content': '<SYS> You are a doctor </SYS> User: What is the best treatment for headache?'}]}\n",
+      "2024-06-10 10:05:22 - INFO - [_client.py:1026:_send_single_request] - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-06-10 10:05:22 - INFO - [generator.py:203:call] - output: GeneratorOutput(data='As a doctor, the best treatment for a headache depends on the underlying cause of the headache. In general, some common treatments for headaches include:\\n\\n1. Over-the-counter pain relievers such as acetaminophen, ibuprofen, or aspirin.\\n2. Getting enough rest and relaxation.\\n3. Applying a cold or warm compress to the head or neck.\\n4. Hydrating by drinking plenty of water.\\n5. Avoiding triggers such as certain foods, drinks, or environmental factors.\\n6. Practicing relaxation techniques such as deep breathing or meditation.\\n7. Prescription medications if the headache is severe or persistent.\\n\\nIt is important to consult with a healthcare professional for a proper diagnosis and treatment plan tailored to your specific needs.', error=None, raw_response='As a doctor, the best treatment for a headache depends on the underlying cause of the headache. In general, some common treatments for headaches include:\\n\\n1. Over-the-counter pain relievers such as acetaminophen, ibuprofen, or aspirin.\\n2. Getting enough rest and relaxation.\\n3. Applying a cold or warm compress to the head or neck.\\n4. Hydrating by drinking plenty of water.\\n5. Avoiding triggers such as certain foods, drinks, or environmental factors.\\n6. Practicing relaxation techniques such as deep breathing or meditation.\\n7. Prescription medications if the headache is severe or persistent.\\n\\nIt is important to consult with a healthcare professional for a proper diagnosis and treatment plan tailored to your specific needs.')\n",
+      "As a doctor, the best treatment for a headache depends on the underlying cause of the headache. In general, some common treatments for headaches include:\n",
+      "\n",
+      "1. Over-the-counter pain relievers such as acetaminophen, ibuprofen, or aspirin.\n",
+      "2. Getting enough rest and relaxation.\n",
+      "3. Applying a cold or warm compress to the head or neck.\n",
+      "4. Hydrating by drinking plenty of water.\n",
+      "5. Avoiding triggers such as certain foods, drinks, or environmental factors.\n",
+      "6. Practicing relaxation techniques such as deep breathing or meditation.\n",
+      "7. Prescription medications if the headache is severe or persistent.\n",
+      "\n",
+      "It is important to consult with a healthcare professional for a proper diagnosis and treatment plan tailored to your specific needs.\n"
      ]
     }
    ],
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +211,7 @@
        "       'data': {'_components': {},\n",
        "        '_parameters': {},\n",
        "        'training': False,\n",
-       "        'sync_client': <openai.OpenAI at 0x1197c97d0>,\n",
+       "        'sync_client': <openai.OpenAI at 0x12766e490>,\n",
        "        'async_client': None,\n",
        "        '_api_key': None}},\n",
        "      'prompt': {'type': 'Prompt',\n",
@@ -222,7 +232,7 @@
        "  'training': False}}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,18 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.serialization import save_json\n",
+    "from lightrag.utils.serialization import save_json\n",
     "\n",
     "save_json(doc.to_dict(), \"doc.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +263,7 @@
        "OrderedDict([('demo', Parameter: demo)])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,27 +274,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-09 23:12:36 - INFO - [generator.py:196:call] - prompt_kwargs: {'input_str': 'What is the best treatment for a cold?'}\n",
-      "2024-06-09 23:12:36 - INFO - [generator.py:197:call] - model_kwargs: {}\n",
-      "2024-06-09 23:12:36 - INFO - [openai_client.py:122:call] - api_kwargs: {'model': 'gpt-3.5-turbo', 'messages': [{'role': 'system', 'content': '<SYS> You are a doctor </SYS> User: What is the best treatment for a cold?'}]}\n",
-      "2024-06-09 23:12:37 - INFO - [_client.py:1026:_send_single_request] - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-06-09 23:12:37 - INFO - [generator.py:205:call] - output: GeneratorOutput(data=\"The best treatment for a cold is usually rest, hydration, and over-the-counter medications to relieve symptoms such as fever, congestion, and sore throat. It's also important to wash your hands frequently and practice good hygiene to prevent spreading the cold to others. In some cases, your doctor may recommend antiviral medications or antibiotics if a secondary bacterial infection is present.\", error=None, raw_response=\"The best treatment for a cold is usually rest, hydration, and over-the-counter medications to relieve symptoms such as fever, congestion, and sore throat. It's also important to wash your hands frequently and practice good hygiene to prevent spreading the cold to others. In some cases, your doctor may recommend antiviral medications or antibiotics if a secondary bacterial infection is present.\")\n"
+      "2024-06-10 10:05:22 - INFO - [generator.py:194:call] - prompt_kwargs: {'input_str': 'What is the best treatment for a cold?'}\n",
+      "2024-06-10 10:05:22 - INFO - [generator.py:195:call] - model_kwargs: {}\n",
+      "2024-06-10 10:05:22 - INFO - [openai_client.py:122:call] - api_kwargs: {'model': 'gpt-3.5-turbo', 'messages': [{'role': 'system', 'content': '<SYS> You are a doctor </SYS> User: What is the best treatment for a cold?'}]}\n",
+      "2024-06-10 10:05:25 - INFO - [_client.py:1026:_send_single_request] - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-06-10 10:05:25 - INFO - [generator.py:203:call] - output: GeneratorOutput(data='The best treatment for a cold typically includes rest, staying hydrated, and using over-the-counter medications to help relieve symptoms such as fever, congestion, and sore throat. It is also important to practice good hygiene by washing your hands frequently and covering your nose and mouth when you cough or sneeze to prevent the spread of the virus. If your symptoms persist or worsen, it is recommended to consult with a healthcare provider.', error=None, raw_response='The best treatment for a cold typically includes rest, staying hydrated, and using over-the-counter medications to help relieve symptoms such as fever, congestion, and sore throat. It is also important to practice good hygiene by washing your hands frequently and covering your nose and mouth when you cough or sneeze to prevent the spread of the virus. If your symptoms persist or worsen, it is recommended to consult with a healthcare provider.')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"The best treatment for a cold is usually rest, hydration, and over-the-counter medications to relieve symptoms such as fever, congestion, and sore throat. It's also important to wash your hands frequently and practice good hygiene to prevent spreading the cold to others. In some cases, your doctor may recommend antiviral medications or antibiotics if a secondary bacterial infection is present.\""
+       "'The best treatment for a cold typically includes rest, staying hydrated, and using over-the-counter medications to help relieve symptoms such as fever, congestion, and sore throat. It is also important to practice good hygiene by washing your hands frequently and covering your nose and mouth when you cough or sneeze to prevent the spread of the virus. If your symptoms persist or worsen, it is recommended to consult with a healthcare provider.'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -378,23 +388,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-09 23:12:38 - INFO - [generator.py:196:call] - prompt_kwargs: {'input_str': 'What is the best treatment for headache?Please be concise and only list the top treatments.'}\n",
-      "2024-06-09 23:12:38 - INFO - [generator.py:197:call] - model_kwargs: {}\n",
-      "2024-06-09 23:12:38 - INFO - [openai_client.py:122:call] - api_kwargs: {'model': 'gpt-3.5-turbo', 'messages': [{'role': 'system', 'content': '<SYS> You are a doctor </SYS> User: What is the best treatment for headache?Please be concise and only list the top treatments.'}]}\n",
-      "2024-06-09 23:12:40 - INFO - [_client.py:1026:_send_single_request] - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-06-09 23:12:40 - INFO - [generator.py:205:call] - output: GeneratorOutput(data='1. Rest and relaxation\\n2. Over-the-counter pain relievers (e.g. ibuprofen, acetaminophen)\\n3. Hydration\\n4. Warm or cold compress\\n5. Deep breathing or relaxation techniques', error=None, raw_response='1. Rest and relaxation\\n2. Over-the-counter pain relievers (e.g. ibuprofen, acetaminophen)\\n3. Hydration\\n4. Warm or cold compress\\n5. Deep breathing or relaxation techniques')\n",
-      "1. Rest and relaxation\n",
-      "2. Over-the-counter pain relievers (e.g. ibuprofen, acetaminophen)\n",
-      "3. Hydration\n",
-      "4. Warm or cold compress\n",
-      "5. Deep breathing or relaxation techniques\n"
+      "2024-06-10 10:05:25 - INFO - [generator.py:194:call] - prompt_kwargs: {'input_str': 'What is the best treatment for headache?Please be concise and only list the top treatments.'}\n",
+      "2024-06-10 10:05:25 - INFO - [generator.py:195:call] - model_kwargs: {}\n",
+      "2024-06-10 10:05:25 - INFO - [openai_client.py:122:call] - api_kwargs: {'model': 'gpt-3.5-turbo', 'messages': [{'role': 'system', 'content': '<SYS> You are a doctor </SYS> User: What is the best treatment for headache?Please be concise and only list the top treatments.'}]}\n",
+      "2024-06-10 10:05:26 - INFO - [_client.py:1026:_send_single_request] - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-06-10 10:05:26 - INFO - [generator.py:203:call] - output: GeneratorOutput(data='1. Over-the-counter pain relievers such as ibuprofen or acetaminophen\\n2. Rest and hydration\\n3. Relaxation techniques such as deep breathing or meditation', error=None, raw_response='1. Over-the-counter pain relievers such as ibuprofen or acetaminophen\\n2. Rest and hydration\\n3. Relaxation techniques such as deep breathing or meditation')\n",
+      "1. Over-the-counter pain relievers such as ibuprofen or acetaminophen\n",
+      "2. Rest and hydration\n",
+      "3. Relaxation techniques such as deep breathing or meditation\n"
      ]
     }
    ],
@@ -413,7 +421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sequential with just a function, will raise error\n",
+    "# def enhance_query(query:str) -> str:\n",
+    "#     return query + \"Please be concise and only list the top treatments.\"\n",
+    "# seq2 = Sequential(enhance_query, doc)\n",
+    "# print(seq2(query))\n",
+    "# print(seq2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +453,7 @@
        ")"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,9 +472,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-project-kernel",
+   "display_name": ".venv",
    "language": "python",
-   "name": "my-project-kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
