Added the RAG notebook (kernal crashed)

--- a/use_cases/question_answering/simple_qa.ipynb
+++ b/use_cases/question_answering/simple_qa.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import needed module from LightRAG\n",
+    "# Import needed modules from LightRAG\n",
     "from lightrag.core.component import Component\n",
     "from lightrag.core.generator import Generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -47,13 +47,15 @@
      "text": [
       "SimpleQA(\n",
       "  (generator): Generator(\n",
-      "    model_kwargs={'model': 'gpt-3.5-turbo'}, model_type=ModelType.LLM\n",
-      "    (system_prompt): Prompt(\n",
-      "      template: {# task desc #}\n",
+      "    model_kwargs={'model': 'gpt-3.5-turbo'}, \n",
+      "    (prompt): Prompt(\n",
+      "      template: \n",
+      "      {% if task_desc_str or output_format_str or tools_str or examples_str or chat_history_str or context_str or steps_str %}\n",
+      "      <SYS>\n",
+      "      {% endif %}\n",
+      "      {# task desc #}\n",
       "      {% if task_desc_str %}\n",
       "      {{task_desc_str}}\n",
-      "      {% else %}\n",
-      "      Answer user query.\n",
       "      {% endif %}\n",
       "      {# output format #}\n",
       "      {% if output_format_str %}\n",
@@ -91,6 +93,9 @@
       "      {{steps_str}}\n",
       "      </STEPS>\n",
       "      {% endif %}\n",
+      "      {% if task_desc_str or output_format_str or tools_str or examples_str or chat_history_str or context_str or steps_str %}\n",
+      "      </SYS>\n",
+      "      {% endif %}\n",
       "      {% if input_str %}\n",
       "      <Inputs>\n",
       "      {{input_str}}\n",
@@ -101,7 +106,8 @@
       "      {{output_str}}\n",
       "      </Outputs>\n",
       "      {% endif %}\n",
-      "      , prompt_variables: ['tools_str', 'examples_str', 'output_format_str', 'chat_history_str', 'context_str', 'task_desc_str', 'steps_str', 'input_str', 'output_str']\n",
+      "      You:\n",
+      "      , prompt_variables: ['task_desc_str', 'steps_str', 'output_str', 'chat_history_str', 'tools_str', 'output_format_str', 'examples_str', 'context_str', 'input_str']\n",
       "    )\n",
       "    (model_client): OpenAIClient()\n",
       "  )\n",
@@ -119,7 +125,7 @@
     "            model_kwargs={'model': 'gpt-3.5-turbo'}\n",
     "        )\n",
     "\n",
-    "    def call(self, query):\n",
+    "    def call(self, query: str):\n",
     "        return self.generator.call(prompt_kwargs={'input_str': query})\n",
     "\n",
     "simple_qa = SimpleQA()\n",
@@ -128,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GeneratorOutput(data='The capital of France is Paris.', error=None, raw_response='The capital of France is Paris.')\n"
+      "GeneratorOutput(data='The capital of France is Paris.', error=None, usage=None, raw_response='The capital of France is Paris.')\n"
      ]
     }
    ],
