--- a/use_cases/question_answering/chatbot.ipynb
+++ b/use_cases/question_answering/chatbot.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import needed module from LightRAG\n",
+    "# Import needed modules from LightRAG\n",
     "from lightrag.core.component import Component\n",
     "from lightrag.core.generator import Generator\n",
     "from lightrag.core.memory import Memory"
@@ -121,9 +121,6 @@
     "            model_kwargs={'model': 'gpt-3.5-turbo'}\n",
     "        )\n",
     "        self.chat_history = Memory() # Memory to store the chat history\n",
-    "\n",
-    "    def call(self, query):\n",
-    "        return self.generator.call({'input_str': query})\n",
     "    \n",
     "    def call(self) -> str:\n",
     "        print(\"Welcome to the ChatBot. Type anything to chat. Type 'exit' to end.\")\n",
@@ -133,13 +130,14 @@
     "                print(\"Goodbye!\")\n",
     "                break\n",
     "            chat_history_str = self.chat_history()\n",
+    "            # Generate the response from the user input and chat history\n",
     "            response = self.generator(\n",
     "                prompt_kwargs={\n",
     "                    \"input_str\": user_input,\n",
     "                    \"chat_history_str\": chat_history_str,\n",
     "                },\n",
     "            )\n",
-    "            # save the user input and response to the memory\n",
+    "            # Save the user input and response to the memory\n",
     "            self.chat_history.add_dialog_turn(\n",
     "                user_query=user_input, assistant_response=response\n",
     "            )\n",
