--- a/developer_notes/retriever.ipynb
+++ b/developer_notes/retriever.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "# sentence splitting is confusing, the length needs to be smaller\n",
     "documents = [Document(text = text, meta_data = {\"title\": \"Paul Graham's essay\", \"path\": \"data/paul_graham/paul_graham_essay.txt\"})]\n",
-    "splitter = DocumentSplitter(split_by=\"token\", split_length=800, split_overlap=200)\n",
+    "splitter = DocumentSplitter(split_by=\"word\", split_length=800, split_overlap=200)\n",
     "\n",
     "print(documents)\n",
     "print(splitter)"
