--- a/developer_notes/component.ipynb
+++ b/developer_notes/component.ipynb
@@ -252,13 +252,13 @@
    "outputs": [],
    "source": [
     "# save the serialized states to a file\n",
-    "from lightrag.utils.serialization import save_pickle, save_json\n",
+    "from lightrag.utils.file_io import save_pickle, save_json\n",
     "states = doc.to_dict()\n",
     "# save_json(states, \"doc.json\")\n",
     "save_pickle(states, \"doc.pkl\")\n",
     "\n",
     "# load the serialized states from a file\n",
-    "from lightrag.utils.serialization import load_pickle, load_json\n",
+    "from lightrag.utils.file_io import load_pickle, load_json\n",
     "states_loaded = load_pickle(\"doc.pkl\")\n",
     "# states_loaded = load_json(\"doc.json\")\n",
     "\n",
@@ -486,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightrag.utils.serialization import save_json\n",
+    "from lightrag.utils.file_io import save_json\n",
     "\n",
     "save_json(doc.to_dict(), \"doc.json\")"
    ]
