--- a/developer_notes/retriever.ipynb
+++ b/developer_notes/retriever.ipynb
@@ -67,11 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fsspec\n",
+    "import os\n",
+    "import time\n",
+    "def get_local_file_metadata(file_path: str):\n",
+    "    stat = os.stat(file_path)\n",
+    "    return {\n",
+    "        'size': stat.st_size,  # File size in bytes\n",
+    "        'creation_date': time.ctime(stat.st_ctime),  # Creation time\n",
+    "        'last_modified_date': time.ctime(stat.st_mtime)  # Last modification time\n",
+    "    }\n",
+    "\n",
     "\n",
     "def load_text_file(file_path: str) -> str:\n",
     "    \"\"\"\n",
@@ -106,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -123,25 +133,28 @@
       "\n",
       "The first programs I tried writing were on the IBM 1401 that our school district used for what was then called \"data processing.\" This was in 9th grade, so I was 13 or 14. The school district's 1401 happened to be in the basement of our junior high school, and my friend Rich Draves and I got permission to use it. It was like a mini Bond villain's lair down there, with all these alien-looking machines — CPU, disk drives, printer, card reader — sitting up on a raised floor under bright fluorescent lights.\n",
       "\n",
-      "The language we used was an early version of Fortran. You had to type programs on punch cards, then stack them in t\n"
+      "The language we used was an early version of Fortran. You had to type programs on punch cards, then stack them in t\n",
+      "{'size': 75042, 'creation_date': 'Sun Jun 16 13:13:07 2024', 'last_modified_date': 'Sun Jun 16 13:13:07 2024'}\n"
      ]
     }
    ],
    "source": [
-    "text = load_text_file('data/paul_graham/paul_graham_essay.txt')\n",
-    "print(text[:1000])"
+    "text = load_text_file('paul_graham/paul_graham_essay.txt')\n",
+    "file_metadata = get_local_file_metadata('paul_graham/paul_graham_essay.txt')\n",
+    "print(text[:1000])\n",
+    "print(file_metadata)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Document(id=c760fb7f-a348-461b-9ace-aaedbca2acd2, text=\n",
+      "[Document(id=9ea48f71-62f3-4251-840a-8702a1938f67, text=\n",
       "\n",
       "What I Worked On\n",
       "\n",
@@ -149,8 +162,8 @@
       "\n",
       "Before college the two main things I worked on, outside of school, were writing and programming. I didn't write essays. I wrote what beginning writers were supposed to write then, and probably still are: short stories. My stories were awful. They had hardly any plot, just characters with strong feelings, which I imagined made them deep.\n",
       "\n",
-      "The first programs I trie ..., meta_data={'title': \"Paul Graham's essay\", 'path': 'data/paul_graham/paul_graham_essay.txt'}, estimated_num_tokens=16534)]\n",
-      "DocumentSplitter(split_by=token, split_length=800, split_overlap=200)\n"
+      "The first programs I trie ..., meta_data={'title': \"Paul Graham's essay\", 'path': 'data/paul_graham/paul_graham_essay.txt', 'size': 75042, 'creation_date': 'Sun Jun 16 13:13:07 2024', 'last_modified_date': 'Sun Jun 16 13:13:07 2024'}, estimated_num_tokens=16534)]\n",
+      "DocumentSplitter(split_by=word, split_length=800, split_overlap=200)\n"
      ]
     }
    ],
@@ -161,7 +174,9 @@
     "from lightrag.core.types import Document\n",
     "\n",
     "# sentence splitting is confusing, the length needs to be smaller\n",
-    "documents = [Document(text = text, meta_data = {\"title\": \"Paul Graham's essay\", \"path\": \"data/paul_graham/paul_graham_essay.txt\"})]\n",
+    "metadata = {\"title\": \"Paul Graham's essay\", \"path\": \"data/paul_graham/paul_graham_essay.txt\"}\n",
+    "metadata.update(file_metadata)\n",
+    "documents = [Document(text = text, meta_data = metadata)]\n",
     "splitter = DocumentSplitter(split_by=\"word\", split_length=800, split_overlap=200)\n",
     "\n",
     "print(documents)\n",
