retriever notes editing and renaming localdocumentdb to localdb and plan to merge it with memory

--- a/developer_notes/retriever.ipynb
+++ b/developer_notes/retriever.ipynb
@@ -494,7 +494,7 @@
     "\n",
     "To use Semantic search, we very likely need TextSplitter and compute the embeddings. This data-preprocessing is more use-case specific and should be better to be done by users in data transformation stage. Then we can treat these embeddings as the input documents.\n",
     "\n",
-    "In this case, the real index is the splitted documents along with its embeddings. We will use ``LocalDocumentDB`` to handle the data transformation and the storage of the index.\n",
+    "In this case, the real index is the splitted documents along with its embeddings. We will use ``LocalDB`` to handle the data transformation and the storage of the index.\n",
     "\n"
    ]
   },
@@ -515,9 +515,9 @@
     }
    ],
    "source": [
-    "from lightrag.core.db import LocalDocumentDB\n",
+    "from lightrag.core.db import LocalDB\n",
     "\n",
-    "db = LocalDocumentDB()\n",
+    "db = LocalDB()\n",
     "db.load_documents(documents)\n",
     "len(db.documents)"
    ]
@@ -1353,7 +1353,7 @@
    "source": [
     "# construct the db\n",
     "\n",
-    "restored_db = LocalDocumentDB.load_state(\"developer_notes/db_states.pkl\")\n",
+    "restored_db = LocalDB.load_state(\"developer_notes/db_states.pkl\")\n",
     "restored_db"
    ]
   },
