move document splitter and to embeddings to components.data_process and edit data note

--- a/developer_notes/retriever.ipynb
+++ b/developer_notes/retriever.ipynb
@@ -843,7 +843,7 @@
    "source": [
     "# split the documents\n",
     "\n",
-    "from lightrag.core.document_splitter import DocumentSplitter\n",
+    "from lightrag.components.data_process import DocumentSplitter\n",
     "from lightrag.core.types import Document\n",
     "\n",
     "# sentence splitting is confusing, the length needs to be smaller\n",
