reorg developer notes

--- a/developer_notes/retriever.ipynb
+++ b/developer_notes/retriever.ipynb
@@ -2687,9 +2687,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-project-kernel",
+   "display_name": "lightrag-project",
    "language": "python",
-   "name": "my-project-kernel"
+   "name": "light-rag-project"
   },
   "language_info": {
    "codemirror_mode": {
