rename bm25 retriever, rename dialogsession to conversation

--- a/developer_notes/retriever.ipynb
+++ b/developer_notes/retriever.ipynb
@@ -225,11 +225,11 @@
     }
    ],
    "source": [
-    "from lightrag.components.retriever import InMemoryBM25Retriever\n",
+    "from lightrag.components.retriever import BM25Retriever\n",
     "\n",
     "document_map_func = lambda x: x[\"content\"]\n",
     "\n",
-    "bm25_retriever = InMemoryBM25Retriever(top_k=2, documents=documents, document_map_func=document_map_func)\n",
+    "bm25_retriever = BM25Retriever(top_k=2, documents=documents, document_map_func=document_map_func)\n",
     "print(bm25_retriever)"
    ]
   },
@@ -2581,11 +2581,11 @@
     }
    ],
    "source": [
-    "from lightrag.components.retriever import InMemoryBM25Retriever\n",
+    "from lightrag.components.retriever import BM25Retriever\n",
     "\n",
     "index_strings = [doc.text for doc in documents]\n",
     "\n",
-    "retriever = InMemoryBM25Retriever(documents=index_strings)\n",
+    "retriever = BM25Retriever(documents=index_strings)\n",
     "\n",
     "# retriever.build_index_from_documents(documents=index_strings)\n",
     "\n",
@@ -2612,7 +2612,7 @@
     }
    ],
    "source": [
-    "retriever = InMemoryBM25Retriever(top_k=1)\n",
+    "retriever = BM25Retriever(top_k=1)\n",
     "retriever.build_index_from_documents([\"hello world\", \"world is beautiful\", \"today is a good day\"])\n",
     "output = retriever.retrieve(\"hello\")\n",
     "output"
@@ -2636,7 +2636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever_loaded = InMemoryBM25Retriever.load_from_file(path)"
+    "retriever_loaded = BM25Retriever.load_from_file(path)"
    ]
   },
   {
